# squirrel

./: .gitignore  Cargo.toml  README.md
fake_reg/: Cargo.toml
fake_reg/src/: main.rs
squirrel/: Cargo.toml
squirrel/src/: lib.rs  main.rs  route.rs  waiting_list.rs
squirrel/tests/: common.rs  squirrel.rs
tools/: .bash_config  buy_ticket.sh  register_user.sh  start_registration.sh
