[package]
name = "fake_reg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
simple_logger = "4.3.3"
tokio = "1.36.0"
