[package]
name = "squirrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
reqwest = "0.11.26"
reqwest-eventsource = "0.5.0"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
rocket_json = "0.1.4"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
simple_logger = "4.3.3"
thiserror = "1.0.58"
tokio = "1.36.0"
tokio-stream = "0.1.15"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
rexpect = "0.5.0"
tokio = { version = "1.36.0", features = ["macros"] }
